--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>LEGO Item</title>
 </head>
 <body>
-  <!-- <div id="app1">If you can see this, React isn't running!</div> -->
+  <div id="app1">If you can see this, React isn't running!</div>
   <div id="app2"></div>
   <div id="app3"></div>
-  <!-- <script src="http://localhost:3003/build.js"></script> -->
-  <script src="http://localhost:3000/app.js"></script>
-  <script src="https://chuck3774bucket.s3.us-east-2.amazonaws.com/bundle.js"></script>
+  <script src="http://ec2-3-141-14-195.us-east-2.compute.amazonaws.com:3003/build.js"></script>
+  <script src="http://ec2-18-224-139-39.us-east-2.compute.amazonaws.com:3000/app.js"></script>
+  <script src="http://ec2-3-131-82-28.us-east-2.compute.amazonaws.com:3001/bundle.js"></script>
 
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -24,3 +24,8 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+<!-- http://ec2-18-224-139-39.us-east-2.compute.amazonaws.com:3000/  Eric -->
+<!-- http://ec2-3-131-82-28.us-east-2.compute.amazonaws.com:3001/ Chuck-->
+<!-- http://ec2-3-141-14-195.us-east-2.compute.amazonaws.com:3003/ JD -->
