--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app3"></div>
   <script src="http://ec2-3-141-14-195.us-east-2.compute.amazonaws.com:3003/build.js"></script>
   <script src="http://ec2-18-224-139-39.us-east-2.compute.amazonaws.com:3000/app.js"></script>
-  <script src="http://ec2-3-131-82-28.us-east-2.compute.amazonaws.com:3001/bundle.js"></script>
+  <script src="http://ec2-3-138-193-197.us-east-2.compute.amazonaws.com:3001//bundle.js"></script>
 
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
