--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <title>LEGO Item</title>
+  <script src="https://kit.fontawesome.com/14313a10c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app1">If you can see this, React isn't running!</div>
   <div id="app2"></div>
   <div id="app3"></div>
   <script src="http://ec2-3-141-14-195.us-east-2.compute.amazonaws.com:3003/build.js"></script>
-  <script src="http://ec2-18-224-139-39.us-east-2.compute.amazonaws.com:3000/app.js"></script>
-  <script src="http://ec2-3-138-193-197.us-east-2.compute.amazonaws.com:3001//bundle.js"></script>
+  <script src="http://ec2-18-191-88-165.us-east-2.compute.amazonaws.com:3000/app.js"></script>
+  <script src="http://ec2-18-224-136-166.us-east-2.compute.amazonaws.com:3001//bundle.js"></script>
 
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
